--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         El torneo contará con 48 equipos, lo que hace que la predicción sea aún más desafiante y emocionante.
         A continuación, se presentan los partidos y un formulario para ingresar tus predicciones.   
     </p>
+
+  <form id="formPronosticos"></form>
+
+  <button id="btnCalcular">Calcular Aciertos</button>
+
+  <h2>Resultados:</h2>
+  <div id="resultados"></div>
+
    <script src="app.js"></script>
 </body>
 </html>
