--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>PRODE - Mundial Canadá/Estados Unidos/México 2026</title>
-</head>
-<body>
-    <h1>PRODE - Mundial 2026</h1>
-    <p>
-        Este pronostico deportivo (PRODE) está diseñado para el Mundial de Fútbol 2026 que se celebrará en Canadá, Estados Unidos y México.
-        El objetivo es predecir los resultados de los partidos del torneo y comparar las predicciones con los resultados reales.
-        El torneo contará con 48 equipos, lo que hace que la predicción sea aún más desafiante y emocionante.
-        A continuación, se presentan los partidos y un formulario para ingresar tus predicciones.   
-    </p>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid bg-navbar-prode">
+          <a class="navbar-brand" href="#">
+            <img
+              class="logo"
+              src="./assets/icon/logo mundial.jpg"
+              alt="Logo"
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            PRODE 2026
+          </a>
+        </div>
+      </nav>
+    </header>
+    <div class="container mt-4">
+      <h1>Mundial 2026 🏆</h1>
+      <p>
+        Este pronostico deportivo (PRODE) está diseñado para el Mundial de
+        Fútbol 2026 que se celebrará en Canadá, Estados Unidos y México. El
+        objetivo es predecir los resultados de los partidos del torneo y
+        comparar las predicciones con los resultados reales. El torneo contará
+        con 48 equipos, lo que hace que la predicción sea aún más desafiante y
+        emocionante. A continuación, se presentan los partidos y un formulario
+        para ingresar tus predicciones.
+      </p>
+      <p id="contador" class="text-center fw-bold"></p>
 
-  <form id="formPronosticos"></form>
-
-  <button id="btnCalcular">Calcular Aciertos</button>
-
-  <h2>Resultados:</h2>
-  <div id="resultados"></div>
-
-   <script src="app.js"></script>
-</body>
+      <form id="formPronosticos" class="mb-4"></form>
+      <div class="d-flex justify-content-center gap-3">
+        <button id="btnCalcular" class="btn btn-success">
+          Calcular Aciertos
+        </button>
+        <button id="btnLimpiar" class="btn btn-outline-danger">
+          Limpiar Formulario
+        </button>
+      </div>
+    </div>
+    <script src="./js/app.js"></script>
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
