--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         emocionante. A continuación, se presentan los partidos y un formulario
         para ingresar tus predicciones.
       </p>
+      <!-- Contador de partidos -->
       <p id="contador" class="text-center fw-bold"></p>
-
+       <!-- Formulario de pronosticos -->
       <form id="formPronosticos" class="mb-4"></form>
       <div class="d-flex justify-content-center gap-3">
         <button id="btnCalcular" class="btn btn-success">
@@ -55,6 +56,7 @@
         </button>
       </div>
     </div>
+    <!-- JS -->
     <script src="./js/app.js"></script>
     <!-- Sweet Alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
